--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-The content of the document......
+<p>The content of the document......</p>
 <p>I just added a paragraf!</p>
 </body>
 
