--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Title of the document</title>
+    <title>Title of the document</title>
 </head>
-
 <body>
-  <h1>HEJ!</h1>
-<p>The content of the document......</p>
-<p>I just added a paragraf!</p>
+    <h1>Welcome!</h1>
+    <p>The content of the document......</p>
+    <p>I just added a paragraf!</p>
 </body>
-
 </html>
-
